progressed with feature engineering

--- a/feature_engineering/public03_matchup.ipynb
+++ b/feature_engineering/public03_matchup.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:45.945234Z",
-     "start_time": "2019-01-21T06:53:40.331052Z"
+     "end_time": "2019-01-22T02:07:38.458897Z",
+     "start_time": "2019-01-22T02:07:32.249631Z"
     }
    },
    "outputs": [
@@ -32,22 +32,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:45.956749Z",
-     "start_time": "2019-01-21T06:53:45.950703Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.window import Window"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:46.160873Z",
-     "start_time": "2019-01-21T06:53:45.962739Z"
+     "end_time": "2019-01-22T02:07:38.649282Z",
+     "start_time": "2019-01-22T02:07:38.464639Z"
     }
    },
    "outputs": [
@@ -73,11 +59,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Teams/Matchup Features\n",
+    "## Global functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-22T02:07:38.672512Z",
+     "start_time": "2019-01-22T02:07:38.655107Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_window(window_type, n, partition_cols, date_orderby_col):\n",
+    "    '''accepts window type (days, games, seasons),\n",
+    "     size of window n,\n",
+    "     and window fields (partition and sort), \n",
+    "     and returns a spark Window'''\n",
+    "    assert type(partition_cols) is list\n",
+    "    assert type(date_orderby_col) is str\n",
+    "    assert type(n) is int\n",
+    "    assert window_type in ['games','days','seasons']\n",
+    "    \n",
+    "    from pyspark.sql.window import Window\n",
+    "    if window_type == 'games':\n",
+    "        ## fixed number of games\n",
+    "        return Window.partitionBy(*partition_cols)\\\n",
+    "                  .orderBy(col(date_orderby_col).desc())\\\n",
+    "                  .rowsBetween(1, n)\n",
+    "\n",
+    "    elif window_type == 'days':\n",
+    "        ## fixed number of days\n",
+    "        seconds = 24*60*60*n\n",
+    "        return Window.partitionBy(*partition_cols)\\\n",
+    "                  .orderBy(col(date_orderby_col).cast('timestamp').cast('long'))\\\n",
+    "                  .rangeBetween(-seconds, -1)\n",
+    "\n",
+    "    elif window_type == 'seasons':\n",
+    "        ## fixed number of seasons, including current\n",
+    "        ## n = 1 is YTD\n",
+    "        seconds = 24*60*60*(180 + 365*(n-1))\n",
+    "        return Window.partitionBy(*partition_cols)\\\n",
+    "                  .orderBy(col(date_orderby_col).cast('timestamp').cast('long'))\\\n",
+    "                  .rangeBetween(-seconds, -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matchup Features\n",
     "* key: (game_id)\n",
     "* table name: features.matchup\n",
     "* __is_same_division__\n",
-    "* __is_same_conf__"
+    "* __is_same_conf__\n",
+    "* __h_wr_past_5_games__\n",
+    "* __h_wr_ytd__\n",
+    "* __h_wr_past_2_seasons__\n",
+    "* __h_wr_past_3_seasons__"
    ]
   },
   {
@@ -85,8 +126,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:46.173272Z",
-     "start_time": "2019-01-21T06:53:46.166529Z"
+     "end_time": "2019-01-22T02:07:38.685339Z",
+     "start_time": "2019-01-22T02:07:38.678696Z"
     }
    },
    "outputs": [],
@@ -101,8 +142,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:48.978793Z",
-     "start_time": "2019-01-21T06:53:46.179088Z"
+     "end_time": "2019-01-22T02:07:42.260186Z",
+     "start_time": "2019-01-22T02:07:38.690476Z"
     }
    },
    "outputs": [],
@@ -146,8 +187,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:51.962668Z",
-     "start_time": "2019-01-21T06:53:48.983558Z"
+     "end_time": "2019-01-22T02:07:46.093756Z",
+     "start_time": "2019-01-22T02:07:42.265742Z"
     }
    },
    "outputs": [
@@ -243,44 +284,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:51.983517Z",
-     "start_time": "2019-01-21T06:53:51.968268Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def get_window(window_type, n):\n",
-    "    '''accepts window type (days, games, seasons)\n",
-    "    and size of window n and returns a spark Window'''\n",
-    "    assert window_type in ['days','games','seasons']\n",
-    "    if window_type == 'games':\n",
-    "        return Window.partitionBy('matchup_id')\\\n",
-    "                  .orderBy(col('date').desc())\\\n",
-    "                  .rowsBetween(1, n)\n",
-    "\n",
-    "    elif window_type == 'days':\n",
-    "        ## window trick: \n",
-    "        ## stackoverflow.com/questions/33207164/...\n",
-    "        ## .../spark-window-functions-rangebetween-dates\n",
-    "        seconds = 24*60*60*n\n",
-    "        return Window.partitionBy('matchup_id')\\\n",
-    "                  .orderBy(col('date').cast('timestamp').cast('long'))\\\n",
-    "                  .rangeBetween(-seconds, -1)\n",
-    "    \n",
-    "    ## doesn't include current season\n",
-    "    elif window_type == 'seasons':\n",
-    "        w = Window.partitionBy('matchup_id')\\\n",
-    "                  .orderBy(col('season').desc())\\\n",
-    "                  .rangeBetween(1, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:52.025959Z",
-     "start_time": "2019-01-21T06:53:51.989455Z"
+     "end_time": "2019-01-22T02:07:46.117888Z",
+     "start_time": "2019-01-22T02:07:46.099491Z"
     }
    },
    "outputs": [],
@@ -301,7 +306,7 @@
     "             .when(col('winner') == '', 0.5)\n",
     "             .otherwise(0.)\n",
     "        ).over(w) \n",
-    "        ## divided by count for home winrate\n",
+    "        ## divided by count for winrate\n",
     "        / F.count(F.lit(1)).over(w)\n",
     "    ).withColumn(\n",
     "        feat_name,\n",
@@ -313,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:52.221445Z",
-     "start_time": "2019-01-21T06:53:52.033600Z"
+     "end_time": "2019-01-22T02:07:46.371177Z",
+     "start_time": "2019-01-22T02:07:46.123888Z"
     }
    },
    "outputs": [],
@@ -338,18 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:52.820106Z",
-     "start_time": "2019-01-21T06:53:52.227829Z"
+     "end_time": "2019-01-22T02:07:46.905277Z",
+     "start_time": "2019-01-22T02:07:46.377723Z"
     }
    },
    "outputs": [],
    "source": [
-    "for n, window_type in [(3, 'games'), (5, 'games'), (365, 'days'), (1200, 'days')]:\n",
-    "    feat_name = 'h_wr_last_{}_{}'.format(n, window_type)\n",
-    "    w = get_window(window_type, n)\n",
+    "for n, window_type in [(5, 'games'), \n",
+    "                       (1, 'seasons'), \n",
+    "                       (2, 'seasons'),\n",
+    "                       (3, 'seasons')]:\n",
+    "    feat_name = 'h_wr_past_{}_{}'.format(n, window_type)\n",
+    "    feat_name = feat_name.replace('past_1_seasons','ytd')\n",
+    "    w = get_window(window_type, n, ['matchup_id'], 'date')\n",
     "    teams_score = get_wr_over_window(teams_score, w, feat_name)\\\n",
     "                      .fillna(0.5, feat_name)\n",
     "\n",
@@ -360,18 +369,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### test some matchups in pandas\n",
-    "* pandas/spark is a good way to check work against 2 different APIs\n",
-    "* choose some games as test cases. these won't ever change."
+    "#### test some matchups in pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:53:52.833908Z",
-     "start_time": "2019-01-21T06:53:52.824794Z"
+     "end_time": "2019-01-22T02:07:46.920556Z",
+     "start_time": "2019-01-22T02:07:46.910279Z"
     }
    },
    "outputs": [],
@@ -394,11 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:54:08.526363Z",
-     "start_time": "2019-01-21T06:53:52.839043Z"
+     "end_time": "2019-01-22T02:08:03.846673Z",
+     "start_time": "2019-01-22T02:07:46.925686Z"
     }
    },
    "outputs": [
@@ -436,7 +443,7 @@
     "test_sdf = teams_score\n",
     "for (n, window_type), v in test_cases.iteritems():\n",
     "    print 'checking {}...'.format(window_type)\n",
-    "    w = get_window(window_type, n)\n",
+    "    w = get_window(window_type, n, ['matchup_id'], 'date')\n",
     "    test_sdf = get_wr_over_window(test_sdf, w, 'val')\n",
     "    check_test_cases(test_sdf, v, 'val')"
    ]
@@ -455,11 +462,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:54:26.152956Z",
-     "start_time": "2019-01-21T06:54:20.174322Z"
+     "end_time": "2019-01-22T02:08:03.857215Z",
+     "start_time": "2019-01-22T02:08:03.851726Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* __is_same_division__\n",
+      "* __is_same_conf__\n",
+      "* __h_wr_past_5_games__\n",
+      "* __h_wr_ytd__\n",
+      "* __h_wr_past_2_seasons__\n",
+      "* __h_wr_past_3_seasons__\n"
+     ]
+    }
+   ],
+   "source": [
+    "print '* __' + '__\\n* __'.join(features_list) + '__'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-22T02:08:09.798128Z",
+     "start_time": "2019-01-22T02:08:03.862627Z"
     }
    },
    "outputs": [],
@@ -470,11 +504,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T06:54:26.438288Z",
-     "start_time": "2019-01-21T06:54:26.159541Z"
+     "end_time": "2019-01-22T02:08:10.044444Z",
+     "start_time": "2019-01-22T02:08:09.802826Z"
     },
     "scrolled": true
    },
@@ -503,10 +537,10 @@
        "      <th>game_id</th>\n",
        "      <th>is_same_division</th>\n",
        "      <th>is_same_conf</th>\n",
-       "      <th>h_wr_last_3_games</th>\n",
-       "      <th>h_wr_last_5_games</th>\n",
-       "      <th>h_wr_last_365_days</th>\n",
-       "      <th>h_wr_last_1200_days</th>\n",
+       "      <th>h_wr_past_5_games</th>\n",
+       "      <th>h_wr_ytd</th>\n",
+       "      <th>h_wr_past_2_seasons</th>\n",
+       "      <th>h_wr_past_3_seasons</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -516,8 +550,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
        "      <td>0.5</td>\n",
+       "      <td>0.500000</td>\n",
        "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -526,8 +560,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -536,8 +570,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.500000</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.500000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -546,8 +580,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.333333</td>\n",
-       "      <td>0.333333</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.333333</td>\n",
        "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -555,9 +589,9 @@
        "      <td>200910110oti</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>0.500000</td>\n",
        "      <td>0.5</td>\n",
+       "      <td>0.500000</td>\n",
        "      <td>0.500000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -565,22 +599,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        game_id  is_same_division  is_same_conf  h_wr_last_3_games  \\\n",
-       "0  200709160oti               1.0           1.0           0.500000   \n",
-       "1  200712300clt               1.0           1.0           1.000000   \n",
-       "2  200810270oti               1.0           1.0           0.500000   \n",
-       "3  200812280clt               1.0           1.0           0.333333   \n",
-       "4  200910110oti               1.0           1.0           0.666667   \n",
+       "        game_id  is_same_division  is_same_conf  h_wr_past_5_games  h_wr_ytd  \\\n",
+       "0  200709160oti               1.0           1.0           0.500000       0.5   \n",
+       "1  200712300clt               1.0           1.0           1.000000       1.0   \n",
+       "2  200810270oti               1.0           1.0           0.500000       0.5   \n",
+       "3  200812280clt               1.0           1.0           0.333333       0.0   \n",
+       "4  200910110oti               1.0           1.0           0.500000       0.5   \n",
        "\n",
-       "   h_wr_last_5_games  h_wr_last_365_days  h_wr_last_1200_days  \n",
-       "0           0.500000                 0.5             0.500000  \n",
-       "1           1.000000                 1.0             1.000000  \n",
-       "2           0.500000                 1.0             0.500000  \n",
-       "3           0.333333                 0.0             0.333333  \n",
-       "4           0.500000                 0.5             0.500000  "
+       "   h_wr_past_2_seasons  h_wr_past_3_seasons  \n",
+       "0             0.500000             0.500000  \n",
+       "1             1.000000             1.000000  \n",
+       "2             0.500000             0.500000  \n",
+       "3             0.333333             0.333333  \n",
+       "4             0.500000             0.500000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +653,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
