--- a/feature_engineering/01_time_date.ipynb
+++ b/feature_engineering/01_time_date.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:20.944389Z",
-     "start_time": "2019-01-20T19:41:15.020470Z"
+     "end_time": "2019-01-22T01:52:37.627844Z",
+     "start_time": "2019-01-22T01:52:29.236526Z"
     }
    },
    "outputs": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:21.098255Z",
-     "start_time": "2019-01-20T19:41:20.950827Z"
+     "end_time": "2019-01-22T01:52:37.821094Z",
+     "start_time": "2019-01-22T01:52:37.632893Z"
     }
    },
    "outputs": [
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:21.108743Z",
-     "start_time": "2019-01-20T19:41:21.103264Z"
+     "end_time": "2019-01-22T01:52:37.827611Z",
+     "start_time": "2019-01-22T01:52:37.824577Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-22T01:52:38.522461Z",
+     "start_time": "2019-01-22T01:52:37.830181Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gametime = spark.table('game_metadata').join(\n",
@@ -121,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:22.211066Z",
-     "start_time": "2019-01-20T19:41:21.114664Z"
+     "end_time": "2019-01-22T01:52:38.841991Z",
+     "start_time": "2019-01-22T01:52:38.528689Z"
     }
    },
    "outputs": [],
@@ -157,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:25.056904Z",
-     "start_time": "2019-01-20T19:41:22.215559Z"
+     "end_time": "2019-01-22T01:52:41.758796Z",
+     "start_time": "2019-01-22T01:52:38.846942Z"
     }
    },
    "outputs": [
@@ -272,7 +277,7 @@
        "4               16.0             15.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:25.175687Z",
-     "start_time": "2019-01-20T19:41:25.061792Z"
+     "end_time": "2019-01-22T01:52:41.864685Z",
+     "start_time": "2019-01-22T01:52:41.764180Z"
     }
    },
    "outputs": [],
@@ -317,11 +322,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:26.191187Z",
-     "start_time": "2019-01-20T19:41:25.179801Z"
+     "end_time": "2019-01-22T01:52:42.704847Z",
+     "start_time": "2019-01-22T01:52:41.870010Z"
     }
    },
    "outputs": [
@@ -371,7 +376,7 @@
        "1        1.0   2508"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:26.970116Z",
-     "start_time": "2019-01-20T19:41:26.197208Z"
+     "end_time": "2019-01-22T01:52:43.160688Z",
+     "start_time": "2019-01-22T01:52:42.709780Z"
     }
    },
    "outputs": [
@@ -558,7 +563,7 @@
        "20       16    176"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,11 +574,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:27.097971Z",
-     "start_time": "2019-01-20T19:41:26.975426Z"
+     "end_time": "2019-01-22T01:52:43.251322Z",
+     "start_time": "2019-01-22T01:52:43.166529Z"
     },
     "run_control": {
      "marked": true
@@ -601,17 +606,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T19:41:28.083095Z",
-     "start_time": "2019-01-20T19:41:27.104091Z"
+     "end_time": "2019-01-22T01:52:45.328760Z",
+     "start_time": "2019-01-22T01:52:43.256020Z"
     }
    },
    "outputs": [],
    "source": [
-    "    gametime.select(*([key] + features_list))\\\n",
-    "            .write.mode('overwrite').saveAsTable(out_tbl)"
+    "gametime.select(*([key] + features_list))\\\n",
+    "        .write.mode('overwrite').saveAsTable(out_tbl)"
    ]
   }
  ],
