--- a/public02_explore_scores_lines.ipynb
+++ b/public02_explore_scores_lines.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:36.359495Z",
-     "start_time": "2019-01-22T02:56:27.169424Z"
+     "end_time": "2019-01-22T04:07:50.265335Z",
+     "start_time": "2019-01-22T04:07:40.835696Z"
     }
    },
    "outputs": [
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:36.611821Z",
-     "start_time": "2019-01-22T02:56:36.364252Z"
+     "end_time": "2019-01-22T04:07:50.448585Z",
+     "start_time": "2019-01-22T04:07:50.271072Z"
     }
    },
    "outputs": [
@@ -75,8 +75,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:37.481722Z",
-     "start_time": "2019-01-22T02:56:36.618065Z"
+     "end_time": "2019-01-22T04:07:51.414154Z",
+     "start_time": "2019-01-22T04:07:50.453223Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:41.740644Z",
-     "start_time": "2019-01-22T02:56:37.486813Z"
+     "end_time": "2019-01-22T04:07:56.159793Z",
+     "start_time": "2019-01-22T04:07:51.420452Z"
     }
    },
    "outputs": [],
@@ -117,8 +117,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:42.229270Z",
-     "start_time": "2019-01-22T02:56:41.745403Z"
+     "end_time": "2019-01-22T04:07:56.701983Z",
+     "start_time": "2019-01-22T04:07:56.165687Z"
     }
    },
    "outputs": [
@@ -238,8 +238,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:42.894546Z",
-     "start_time": "2019-01-22T02:56:42.235721Z"
+     "end_time": "2019-01-22T04:07:57.354648Z",
+     "start_time": "2019-01-22T04:07:56.707196Z"
     }
    },
    "outputs": [],
@@ -274,8 +274,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:43.321177Z",
-     "start_time": "2019-01-22T02:56:42.900079Z"
+     "end_time": "2019-01-22T04:07:57.746933Z",
+     "start_time": "2019-01-22T04:07:57.360145Z"
     }
    },
    "outputs": [
@@ -431,8 +431,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:43.663366Z",
-     "start_time": "2019-01-22T02:56:43.326909Z"
+     "end_time": "2019-01-22T04:07:58.132398Z",
+     "start_time": "2019-01-22T04:07:57.752844Z"
     }
    },
    "outputs": [
@@ -534,21 +534,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>200811160cin</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>11</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>6</td>\n",
-       "      <td>T</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>201610300cin</td>\n",
        "      <td>2016</td>\n",
        "      <td>8</td>\n",
@@ -562,6 +547,21 @@
        "      <td>0</td>\n",
        "      <td>54</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>200811160cin</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>T</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -572,16 +572,16 @@
        "1  201211110sfo    2012       10       24       24            6            T   \n",
        "2  201311240gnb    2013       12       26       26            6            T   \n",
        "3  201410120cin    2014        6       37       37            6            T   \n",
-       "4  200811160cin    2008       11       13       13            6            T   \n",
-       "5  201610300cin    2016        8       27       27            6            T   \n",
+       "4  201610300cin    2016        8       27       27            6            T   \n",
+       "5  200811160cin    2008       11       13       13            6            T   \n",
        "\n",
        "   winning_score  losing_score  winning_margin  home_net  combined_points  \n",
        "0              6             6               0         0               12  \n",
        "1             24            24               0         0               48  \n",
        "2             26            26               0         0               52  \n",
        "3             37            37               0         0               74  \n",
-       "4             13            13               0         0               26  \n",
-       "5             27            27               0         0               54  "
+       "4             27            27               0         0               54  \n",
+       "5             13            13               0         0               26  "
       ]
      },
      "execution_count": 8,
@@ -605,8 +605,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:45.032967Z",
-     "start_time": "2019-01-22T02:56:43.668874Z"
+     "end_time": "2019-01-22T04:07:59.225699Z",
+     "start_time": "2019-01-22T04:07:58.138578Z"
     }
    },
    "outputs": [
@@ -691,8 +691,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:49.150126Z",
-     "start_time": "2019-01-22T02:56:45.039066Z"
+     "end_time": "2019-01-22T04:08:02.065943Z",
+     "start_time": "2019-01-22T04:07:59.231154Z"
     }
    },
    "outputs": [
@@ -740,8 +740,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:56:54.568696Z",
-     "start_time": "2019-01-22T02:56:49.155469Z"
+     "end_time": "2019-01-22T04:08:06.395269Z",
+     "start_time": "2019-01-22T04:08:02.073200Z"
     }
    },
    "outputs": [],
@@ -776,8 +776,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:01.895307Z",
-     "start_time": "2019-01-22T02:56:54.574482Z"
+     "end_time": "2019-01-22T04:08:20.704227Z",
+     "start_time": "2019-01-22T04:08:06.400751Z"
     },
     "scrolled": false
    },
@@ -872,8 +872,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:11.541110Z",
-     "start_time": "2019-01-22T02:57:01.902681Z"
+     "end_time": "2019-01-22T04:08:30.183367Z",
+     "start_time": "2019-01-22T04:08:20.711191Z"
     },
     "scrolled": false
    },
@@ -948,8 +948,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:12.609955Z",
-     "start_time": "2019-01-22T02:57:11.545218Z"
+     "end_time": "2019-01-22T04:08:33.689715Z",
+     "start_time": "2019-01-22T04:08:30.195901Z"
     },
     "scrolled": false
    },
@@ -1002,8 +1002,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:14.561498Z",
-     "start_time": "2019-01-22T02:57:12.615166Z"
+     "end_time": "2019-01-22T04:08:36.109161Z",
+     "start_time": "2019-01-22T04:08:33.695722Z"
     }
    },
    "outputs": [
@@ -1046,8 +1046,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:18.352637Z",
-     "start_time": "2019-01-22T02:57:14.570082Z"
+     "end_time": "2019-01-22T04:08:39.014743Z",
+     "start_time": "2019-01-22T04:08:36.114996Z"
     },
     "scrolled": false
    },
@@ -1142,8 +1142,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:18.647971Z",
-     "start_time": "2019-01-22T02:57:18.358962Z"
+     "end_time": "2019-01-22T04:08:39.287610Z",
+     "start_time": "2019-01-22T04:08:39.021594Z"
     }
    },
    "outputs": [
@@ -1292,8 +1292,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:22.348972Z",
-     "start_time": "2019-01-22T02:57:18.654163Z"
+     "end_time": "2019-01-22T04:08:42.042490Z",
+     "start_time": "2019-01-22T04:08:39.293971Z"
     }
    },
    "outputs": [
@@ -1473,8 +1473,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:25.514765Z",
-     "start_time": "2019-01-22T02:57:22.355818Z"
+     "end_time": "2019-01-22T04:08:46.102098Z",
+     "start_time": "2019-01-22T04:08:42.047507Z"
     },
     "run_control": {
      "marked": true
@@ -1484,7 +1484,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e2be890>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2472b850>"
       ]
      },
      "execution_count": 19,
@@ -1532,8 +1532,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:41.346622Z",
-     "start_time": "2019-01-22T02:57:25.529353Z"
+     "end_time": "2019-01-22T04:09:11.427512Z",
+     "start_time": "2019-01-22T04:08:46.107704Z"
     },
     "scrolled": true
    },
@@ -1717,8 +1717,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:41.527930Z",
-     "start_time": "2019-01-22T02:57:41.351635Z"
+     "end_time": "2019-01-22T04:09:11.590088Z",
+     "start_time": "2019-01-22T04:09:11.432975Z"
     }
    },
    "outputs": [],
@@ -1742,8 +1742,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:41.694122Z",
-     "start_time": "2019-01-22T02:57:41.533230Z"
+     "end_time": "2019-01-22T04:09:11.751400Z",
+     "start_time": "2019-01-22T04:09:11.594882Z"
     }
    },
    "outputs": [
@@ -1904,8 +1904,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:42.494776Z",
-     "start_time": "2019-01-22T02:57:41.697949Z"
+     "end_time": "2019-01-22T04:09:12.520632Z",
+     "start_time": "2019-01-22T04:09:11.757396Z"
     }
    },
    "outputs": [],
@@ -1925,8 +1925,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:42.660093Z",
-     "start_time": "2019-01-22T02:57:42.500839Z"
+     "end_time": "2019-01-22T04:09:12.716210Z",
+     "start_time": "2019-01-22T04:09:12.526331Z"
     }
    },
    "outputs": [
@@ -2125,15 +2125,15 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:44.215011Z",
-     "start_time": "2019-01-22T02:57:42.666463Z"
+     "end_time": "2019-01-22T04:09:13.974397Z",
+     "start_time": "2019-01-22T04:09:12.721722Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d37bcd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23a94dd0>"
       ]
      },
      "execution_count": 25,
@@ -2201,8 +2201,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:44.637856Z",
-     "start_time": "2019-01-22T02:57:44.220565Z"
+     "end_time": "2019-01-22T04:09:14.137576Z",
+     "start_time": "2019-01-22T04:09:13.980518Z"
     }
    },
    "outputs": [],
@@ -2231,8 +2231,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:44.882156Z",
-     "start_time": "2019-01-22T02:57:44.646185Z"
+     "end_time": "2019-01-22T04:09:14.267961Z",
+     "start_time": "2019-01-22T04:09:14.143219Z"
     }
    },
    "outputs": [
@@ -2320,15 +2320,15 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:45.834180Z",
-     "start_time": "2019-01-22T02:57:44.888354Z"
+     "end_time": "2019-01-22T04:09:14.795434Z",
+     "start_time": "2019-01-22T04:09:14.272818Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a21cf3f50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2834ded0>"
       ]
      },
      "execution_count": 28,
@@ -2372,15 +2372,15 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:47.293335Z",
-     "start_time": "2019-01-22T02:57:45.841566Z"
+     "end_time": "2019-01-22T04:09:15.650866Z",
+     "start_time": "2019-01-22T04:09:14.800515Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e40bb50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a283be510>"
       ]
      },
      "execution_count": 29,
@@ -2428,15 +2428,15 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:48.897771Z",
-     "start_time": "2019-01-22T02:57:47.298307Z"
+     "end_time": "2019-01-22T04:09:16.625455Z",
+     "start_time": "2019-01-22T04:09:15.656519Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a21e41b10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2849cb90>"
       ]
      },
      "execution_count": 30,
@@ -2484,8 +2484,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:48.911548Z",
-     "start_time": "2019-01-22T02:57:48.901939Z"
+     "end_time": "2019-01-22T04:09:16.640443Z",
+     "start_time": "2019-01-22T04:09:16.628932Z"
     }
    },
    "outputs": [],
@@ -2513,8 +2513,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:52.051251Z",
-     "start_time": "2019-01-22T02:57:48.917339Z"
+     "end_time": "2019-01-22T04:09:18.828882Z",
+     "start_time": "2019-01-22T04:09:16.644523Z"
     },
     "run_control": {
      "marked": true
@@ -2583,8 +2583,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:53.232111Z",
-     "start_time": "2019-01-22T02:57:52.055906Z"
+     "end_time": "2019-01-22T04:09:19.243263Z",
+     "start_time": "2019-01-22T04:09:18.833054Z"
     }
    },
    "outputs": [
@@ -2630,8 +2630,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:54.161008Z",
-     "start_time": "2019-01-22T02:57:53.236752Z"
+     "end_time": "2019-01-22T04:09:19.705504Z",
+     "start_time": "2019-01-22T04:09:19.248589Z"
     }
    },
    "outputs": [
@@ -2676,8 +2676,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:57:58.710418Z",
-     "start_time": "2019-01-22T02:57:54.165632Z"
+     "end_time": "2019-01-22T04:09:26.149469Z",
+     "start_time": "2019-01-22T04:09:19.714735Z"
     }
    },
    "outputs": [
@@ -2759,8 +2759,8 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:58:02.432734Z",
-     "start_time": "2019-01-22T02:57:58.715976Z"
+     "end_time": "2019-01-22T04:09:31.190668Z",
+     "start_time": "2019-01-22T04:09:26.153945Z"
     }
    },
    "outputs": [
@@ -2838,8 +2838,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:58:04.102231Z",
-     "start_time": "2019-01-22T02:58:02.440268Z"
+     "end_time": "2019-01-22T04:09:32.943704Z",
+     "start_time": "2019-01-22T04:09:31.211485Z"
     }
    },
    "outputs": [],
@@ -2887,15 +2887,15 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:58:07.753986Z",
-     "start_time": "2019-01-22T02:58:04.108154Z"
+     "end_time": "2019-01-22T04:09:40.351665Z",
+     "start_time": "2019-01-22T04:09:32.949742Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e246c50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a241ca290>"
       ]
      },
      "execution_count": 38,
@@ -2905,7 +2905,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a226bb610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a28d16310>"
       ]
      },
      "execution_count": 38,
@@ -2953,15 +2953,15 @@
    "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:58:10.042022Z",
-     "start_time": "2019-01-22T02:58:07.761933Z"
+     "end_time": "2019-01-22T04:09:46.181063Z",
+     "start_time": "2019-01-22T04:09:40.361711Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2280aad0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a24fb3150>"
       ]
      },
      "execution_count": 39,
@@ -2971,7 +2971,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2280aad0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a24fb3150>"
       ]
      },
      "execution_count": 39,
@@ -3017,8 +3017,8 @@
    "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:58:10.580793Z",
-     "start_time": "2019-01-22T02:58:10.046385Z"
+     "end_time": "2019-01-22T04:09:46.905676Z",
+     "start_time": "2019-01-22T04:09:46.194049Z"
     },
     "run_control": {
      "marked": true
@@ -3037,8 +3037,8 @@
    "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:58:11.950175Z",
-     "start_time": "2019-01-22T02:58:10.587584Z"
+     "end_time": "2019-01-22T04:09:50.901409Z",
+     "start_time": "2019-01-22T04:09:46.912780Z"
     }
    },
    "outputs": [
