--- a/feature_engineering/00_plan_and_ideas.ipynb
+++ b/feature_engineering/00_plan_and_ideas.ipynb
@@ -105,9 +105,11 @@
     " * Defense\n",
     " * Special Teams\n",
     "* &#x23F8; DVOA rankings comparisons between 2 teams\n",
-    "* Stats\n",
+    "\n",
+    "### Stats\n",
     " * &#x23F8; TDs\n",
     " * &#x23F8; points\n",
+    " * &#x23F8; yards, ypa, ypc, etc.\n",
     " * &#x23F8; turnovers\n",
     " * &#x23F8; time of possession\n",
     " * &#x270B; yards\n",
@@ -155,10 +157,12 @@
     "* &#x270B; team vs. coach\n",
     "\n",
     "### Travel\n",
-    "* &#x1F6A8; travel from last game\n",
-    "* &#x1F6A8; distance from home stadium\n",
-    "* &#x23F8; travel distance last 5 games\n",
-    "* &#x23F8; travel distance from last game, decayed by time (cross-country in 10 days is not as bad as 5)\n",
+    "* &#x2714; travel from last game\n",
+    "* &#x2714; distance from home stadium\n",
+    "* &#x2714; travel distance from last game, decayed by time (cross-country in 10 days is not as bad as 5)\n",
+    "* &#x23F8; Sum of travel last 3, 5 games; sum of distance from home; sum of timezone changes\n",
+    "* &#x23F8; Sum of consecutive distances (multiplied by repeats?), to raise for multiple games in a row\n",
+    "* Convolution of travel\n",
     "\n",
     "### Home/Visitor\n",
     "* &#x1F6A8; binary H/V\n",
@@ -181,7 +185,13 @@
     "### Spread\n",
     "* &#x1F6A8; raw spread\n",
     "* &#x23F8; team's records in games with roughly this spread\n",
-    "* &#x23F8; historic cover rate at this spread"
+    "* &#x23F8; historic cover rate at this spread\n",
+    "\n",
+    "### Weather\n",
+    "* &#x1F6A8; temperature\n",
+    "* &#x1F6A8; is_precipitation\n",
+    "* &#x1F6A8; is_snow\n",
+    "* &#x23F8; others?\n"
    ]
   },
   {
