moved mpl boilerplate to configs and cleaned up past notebooks

--- a/feature_engineering/00_plan_and_ideas.ipynb
+++ b/feature_engineering/00_plan_and_ideas.ipynb
@@ -162,7 +162,7 @@
     "* &#x2714; travel distance from last game, decayed by time (cross-country in 10 days is not as bad as 5)\n",
     "* &#x23F8; Sum of travel last 3, 5 games; sum of distance from home; sum of timezone changes\n",
     "* &#x23F8; Sum of consecutive distances (multiplied by repeats?), to raise for multiple games in a row\n",
-    "* Convolution of travel\n",
+    "* &#x23F8; Convolution of travel\n",
     "\n",
     "### Home/Visitor\n",
     "* &#x1F6A8; binary H/V\n",
