--- a/initialize.ipynb
+++ b/initialize.ipynb
@@ -48,7 +48,9 @@
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "import numpy as np\n",
+    "import os\n",
     "import seaborn as sns\n",
+    "import sys\n",
     "\n",
     "import pyspark.sql.functions as F\n",
     "from pyspark.sql.functions import col, udf\n",
@@ -63,15 +65,11 @@
     "%matplotlib inline\n",
     "\n",
     "spark.sql('USE football_games')\n",
-    "os.chdir('/Users/joshplotkin/Dropbox/data_science/football_data')"
+    "os.chdir('/Users/joshplotkin/Dropbox/data_science/football_data')\n",
+    "sys.path.append('../modeling-football-outcomes/config')\n",
+    "\n",
+    "from mpl_style import *"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
