minor changes to feature engineering notebooks

--- a/feature_engineering/00_plan_and_ideas.ipynb
+++ b/feature_engineering/00_plan_and_ideas.ipynb
@@ -171,6 +171,8 @@
     "* &#x1F6A8; home/away record\n",
     "* &#x1F6A8; home/away record ATS\n",
     "* &#x270B; this team's home field. net H/V record recently?\n",
+    "* &#x1F6A7; days since last home/away game\n",
+    "* &#x270B; convolution of home/away games\n",
     "\n",
     "### Injuries\n",
     "* &#x23F3; key injuries by position/snaps played\n",
