--- a/feature_engineering/public02_teams.ipynb
+++ b/feature_engineering/public02_teams.ipynb
@@ -59,6 +59,85 @@
    },
    "outputs": [],
    "source": [
+    "def get_outcomes_df():\n",
+    "    '''form a Spark DF, keyed on (game_id, team_id), \n",
+    "    and including season, date, winner and\n",
+    "    whether each of the 3 spreads were covered/pushed\n",
+    "    '''\n",
+    "    games = spark.table('game').select('game_id','season',col('date').cast(TimestampType()),\n",
+    "                                       'v_team_id','h_team_id')\n",
+    "    scores = spark.table('game_outcome').select('game_id','h_final','v_final')\n",
+    "\n",
+    "    spread_cols = ['open_fav','open_spread',\n",
+    "                   'close_fav','close_spread',\n",
+    "                   'pfr_fav','pfr_spread']\n",
+    "\n",
+    "    lines = spark.table('game_line').select(\n",
+    "        *(['game_id'] + spread_cols)\n",
+    "    )\n",
+    "\n",
+    "    ## winner of game\n",
+    "    teams_score = games.join(\n",
+    "            scores, on='game_id'\n",
+    "        ).join(\n",
+    "            lines, on='game_id'\n",
+    "        ).withColumn(\n",
+    "            'winner', \n",
+    "            F.when(col('h_final') > col('v_final'), col('h_team_id'))\n",
+    "             .when(col('h_final') < col('v_final'), col('v_team_id'))\n",
+    "             .otherwise('')\n",
+    "        )\n",
+    "\n",
+    "    ## whether home team covered spread\n",
+    "    ## since spread is the same for both teams\n",
+    "    ## inverse is true for visiting team\n",
+    "    for spread in ['open','close','pfr']:\n",
+    "        teams_score = teams_score.withColumn(\n",
+    "            'h_margin', col('h_final') - col('v_final')\n",
+    "        ).withColumn(\n",
+    "            'h_line', \n",
+    "            ## minimum margin\n",
+    "            col('{}_spread'.format(spread))\n",
+    "            * F.when(col('{}_fav'.format(spread)) == 'H', 1).otherwise(-1)\n",
+    "        ).withColumn(\n",
+    "            '{}_h_cover'.format(spread),\n",
+    "            F.when(\n",
+    "                ## push\n",
+    "                col('h_margin') == col('h_line'), 0.5)\n",
+    "             .when(\n",
+    "                col('h_margin') > col('h_line'), 1.)\n",
+    "             .otherwise(0.)\n",
+    "        ).drop('h_margin','h_line')\n",
+    "\n",
+    "    teams_score = teams_score.drop(*(['h_final','v_final'] + spread_cols))\n",
+    "\n",
+    "    team_game = teams_score.withColumn(\n",
+    "            'tmp', F.array('h_team_id','v_team_id')\n",
+    "        ).select(\n",
+    "            '*', \n",
+    "            F.explode('tmp').alias('team_id')\n",
+    "        ).drop('tmp').cache()\n",
+    "\n",
+    "    for spread in ['open','close','pfr']:\n",
+    "        team_game = team_game.withColumn(\n",
+    "                '{}_cover'.format(spread),\n",
+    "                F.when(col('h_team_id') == col('team_id'), \n",
+    "                       col('{}_h_cover'.format(spread)))\n",
+    "                 .otherwise(F.lit(1.) - col('{}_h_cover'.format(spread)))          \n",
+    "            ).drop('{}_h_cover'.format(spread))\n",
+    "\n",
+    "    return team_game.withColumn(\n",
+    "            'won_game', \n",
+    "            # win\n",
+    "            F.when(col('team_id') == col('winner'), 1.)\n",
+    "            # tie\n",
+    "             .when(col('winner') == '', 0.5)\n",
+    "            # loss\n",
+    "             .otherwise(0.)\n",
+    "        ).drop(\n",
+    "            'v_team_id','h_team_id','winner'\n",
+    "        ).cache()\n",
+    "    \n",
     "def get_window(window_type, n, partition_cols, date_orderby_col):\n",
     "    '''accepts window type (days, games, seasons),\n",
     "     size of window n,\n",
@@ -376,52 +455,7 @@
     }
    ],
    "source": [
-    "games = spark.table('game').select('game_id','season',col('date').cast(TimestampType()),\n",
-    "                                   'v_team_id','h_team_id')\n",
-    "scores = spark.table('game_outcome').select('game_id','h_final','v_final')\n",
-    "\n",
-    "spread_cols = ['open_fav','open_spread',\n",
-    "               'close_fav','close_spread',\n",
-    "               'pfr_fav','pfr_spread']\n",
-    "\n",
-    "lines = spark.table('game_line').select(\n",
-    "    *(['game_id'] + spread_cols)\n",
-    ")\n",
-    "\n",
-    "## winner of game\n",
-    "teams_score = games.join(\n",
-    "        scores, on='game_id'\n",
-    "    ).join(\n",
-    "        lines, on='game_id'\n",
-    "    ).withColumn(\n",
-    "        'winner', \n",
-    "        F.when(col('h_final') > col('v_final'), col('h_team_id'))\n",
-    "         .when(col('h_final') < col('v_final'), col('v_team_id'))\n",
-    "         .otherwise('')\n",
-    "    )\n",
-    "\n",
-    "## whether home team covered spread\n",
-    "## since spread is the same for both teams\n",
-    "## inverse is true for visiting team\n",
-    "for spread in ['open','close','pfr']:\n",
-    "    teams_score = teams_score.withColumn(\n",
-    "        'h_margin', col('h_final') - col('v_final')\n",
-    "    ).withColumn(\n",
-    "        'h_line', \n",
-    "        ## minimum margin\n",
-    "        col('{}_spread'.format(spread))\n",
-    "        * F.when(col('{}_fav'.format(spread)) == 'H', 1).otherwise(-1)\n",
-    "    ).withColumn(\n",
-    "        '{}_h_cover'.format(spread),\n",
-    "        F.when(\n",
-    "            ## push\n",
-    "            col('h_margin') == col('h_line'), 0.5)\n",
-    "         .when(\n",
-    "            col('h_margin') > col('h_line'), 1.)\n",
-    "         .otherwise(0.)\n",
-    "    ).drop('h_margin','h_line')\n",
-    "\n",
-    "teams_score.filter(col('game_id') == '201510180det').toPandas()\n",
+    "teams_score = get_outcomes_df() \n",
     "\n",
     "teams_score = teams_score.drop(*(['h_final','v_final'] + spread_cols))"
    ]
