changed shell scripts to reflect model_pipeline dir name

--- a/model_pipeline/generate_configs_execute.ipynb
+++ b/model_pipeline/generate_configs_execute.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "%run initialize.ipynb\n",
+    "%run ../config/initialize.ipynb\n",
     "\n",
     "import json\n",
     "import shutil"
@@ -815,7 +815,7 @@
     "    unset PYSPARK_DRIVER_PYTHON && \\\n",
     "    unset PYSPARK_DRIVER_PYTHON_OPTS && \\\n",
     "    cd /Users/joshplotkin/Dropbox/data_science/modeling-football-outcomes/ && \\\n",
-    "    src/model_pipeline.sh {MODEL_ID}"
+    "    model_pipeline/model_pipeline.sh {MODEL_ID}"
    ]
   },
   {
