checked all notebooks after directory changes

--- a/05_feature_engineering/01_time_date.ipynb
+++ b/05_feature_engineering/01_time_date.ipynb
@@ -2,24 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:45.359321Z",
-     "start_time": "2019-01-22T04:09:45.349881Z"
+     "end_time": "2019-01-25T05:12:56.010337Z",
+     "start_time": "2019-01-25T05:12:42.361359Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:File `u'../initialize.ipynb.py'` not found.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>.container {width:90% !important;}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "%run ../initialize.ipynb"
+    "%run ../config/initialize.ipynb"
    ]
   },
   {
@@ -40,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:45.390055Z",
-     "start_time": "2019-01-22T04:09:45.380704Z"
+     "end_time": "2019-01-25T05:12:56.020399Z",
+     "start_time": "2019-01-25T05:12:56.015280Z"
     }
    },
    "outputs": [],
@@ -56,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:45.713146Z",
-     "start_time": "2019-01-22T04:09:45.396937Z"
+     "end_time": "2019-01-25T05:12:57.460736Z",
+     "start_time": "2019-01-25T05:12:56.026501Z"
     }
    },
    "outputs": [],
@@ -94,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:46.254213Z",
-     "start_time": "2019-01-22T04:09:45.721577Z"
+     "end_time": "2019-01-25T05:13:00.347576Z",
+     "start_time": "2019-01-25T05:12:57.465372Z"
     }
    },
    "outputs": [
@@ -209,7 +214,7 @@
        "4               16.0             15.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,11 +239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:46.317645Z",
-     "start_time": "2019-01-22T04:09:46.261159Z"
+     "end_time": "2019-01-25T05:13:00.605044Z",
+     "start_time": "2019-01-25T05:13:00.354031Z"
     }
    },
    "outputs": [],
@@ -254,11 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:47.148191Z",
-     "start_time": "2019-01-22T04:09:46.325393Z"
+     "end_time": "2019-01-25T05:13:01.993518Z",
+     "start_time": "2019-01-25T05:13:00.610120Z"
     }
    },
    "outputs": [
@@ -308,7 +313,7 @@
        "1        1.0  20338"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:47.749538Z",
-     "start_time": "2019-01-22T04:09:47.154939Z"
+     "end_time": "2019-01-25T05:13:03.004608Z",
+     "start_time": "2019-01-25T05:13:01.998996Z"
     }
    },
    "outputs": [
@@ -495,7 +500,7 @@
        "20       16   1478"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,11 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:48.105432Z",
-     "start_time": "2019-01-22T04:09:47.757159Z"
+     "end_time": "2019-01-25T05:13:03.137150Z",
+     "start_time": "2019-01-25T05:13:03.013183Z"
     },
     "run_control": {
      "marked": true
@@ -538,11 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:49.978132Z",
-     "start_time": "2019-01-22T04:09:48.111033Z"
+     "end_time": "2019-01-25T05:13:05.438100Z",
+     "start_time": "2019-01-25T05:13:03.143608Z"
     },
     "scrolled": true
    },
@@ -554,11 +559,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T04:09:50.290700Z",
-     "start_time": "2019-01-22T04:09:49.984110Z"
+     "end_time": "2019-01-25T05:13:05.916906Z",
+     "start_time": "2019-01-25T05:13:05.443506Z"
     }
    },
    "outputs": [
@@ -669,7 +674,7 @@
        "4      5.0          0.0           0.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
