--- a/00_source_data/scrubbed_source_wrangle_data.ipynb
+++ b/00_source_data/scrubbed_source_wrangle_data.ipynb
@@ -96,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = '../football_data/'"
+    "DATA_DIR = '../../football_data/'"
    ]
   },
   {
