--- a/05_feature_engineering/03_matchup.ipynb
+++ b/05_feature_engineering/03_matchup.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:38.458897Z",
-     "start_time": "2019-01-22T02:07:32.249631Z"
+     "end_time": "2019-01-25T05:14:07.353970Z",
+     "start_time": "2019-01-25T05:14:00.994681Z"
     }
    },
    "outputs": [
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "%run ../initialize.ipynb"
+    "%run ../config/initialize.ipynb"
    ]
   },
   {
@@ -36,11 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:38.672512Z",
-     "start_time": "2019-01-22T02:07:38.655107Z"
+     "end_time": "2019-01-25T05:14:07.379173Z",
+     "start_time": "2019-01-25T05:14:07.360357Z"
     }
    },
    "outputs": [],
@@ -95,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:38.685339Z",
-     "start_time": "2019-01-22T02:07:38.678696Z"
+     "end_time": "2019-01-25T05:14:07.393490Z",
+     "start_time": "2019-01-25T05:14:07.386185Z"
     }
    },
    "outputs": [],
@@ -111,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:42.260186Z",
-     "start_time": "2019-01-22T02:07:38.690476Z"
+     "end_time": "2019-01-25T05:14:10.252954Z",
+     "start_time": "2019-01-25T05:14:07.399462Z"
     }
    },
    "outputs": [],
@@ -156,11 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:46.093756Z",
-     "start_time": "2019-01-22T02:07:42.265742Z"
+     "end_time": "2019-01-25T05:14:13.146188Z",
+     "start_time": "2019-01-25T05:14:10.258481Z"
     }
    },
    "outputs": [
@@ -213,7 +213,7 @@
        "1               1.0    0.0  1069"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:46.117888Z",
-     "start_time": "2019-01-22T02:07:46.099491Z"
+     "end_time": "2019-01-25T05:14:13.169288Z",
+     "start_time": "2019-01-25T05:14:13.151607Z"
     }
    },
    "outputs": [],
@@ -290,11 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:46.371177Z",
-     "start_time": "2019-01-22T02:07:46.123888Z"
+     "end_time": "2019-01-25T05:14:13.367756Z",
+     "start_time": "2019-01-25T05:14:13.174724Z"
     }
    },
    "outputs": [],
@@ -315,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:46.905277Z",
-     "start_time": "2019-01-22T02:07:46.377723Z"
+     "end_time": "2019-01-25T05:14:13.958238Z",
+     "start_time": "2019-01-25T05:14:13.372961Z"
     }
    },
    "outputs": [],
@@ -346,11 +346,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:07:46.920556Z",
-     "start_time": "2019-01-22T02:07:46.910279Z"
+     "end_time": "2019-01-25T05:14:13.974376Z",
+     "start_time": "2019-01-25T05:14:13.962800Z"
     }
    },
    "outputs": [],
@@ -373,11 +373,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:08:03.846673Z",
-     "start_time": "2019-01-22T02:07:46.925686Z"
+     "end_time": "2019-01-25T05:14:31.982708Z",
+     "start_time": "2019-01-25T05:14:13.978700Z"
     }
    },
    "outputs": [
@@ -434,11 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:08:03.857215Z",
-     "start_time": "2019-01-22T02:08:03.851726Z"
+     "end_time": "2019-01-25T05:14:31.994826Z",
+     "start_time": "2019-01-25T05:14:31.988522Z"
     }
    },
    "outputs": [
@@ -461,11 +461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:08:09.798128Z",
-     "start_time": "2019-01-22T02:08:03.862627Z"
+     "end_time": "2019-01-25T05:14:39.135953Z",
+     "start_time": "2019-01-25T05:14:32.000636Z"
     }
    },
    "outputs": [],
@@ -476,11 +476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T02:08:10.044444Z",
-     "start_time": "2019-01-22T02:08:09.802826Z"
+     "end_time": "2019-01-25T05:14:39.674954Z",
+     "start_time": "2019-01-25T05:14:39.142151Z"
     },
     "scrolled": true
    },
@@ -586,7 +586,7 @@
        "4             0.500000             0.500000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
