updated feature engineering progress notebook

--- a/05_feature_engineering/00_plan_and_ideas.ipynb
+++ b/05_feature_engineering/00_plan_and_ideas.ipynb
@@ -165,11 +165,11 @@
     "* &#x23F8; Convolution of travel\n",
     "\n",
     "### Home/Visitor\n",
-    "* &#x1F6A8; binary H/V\n",
-    "* &#x1F6A8; consecutive home/away games\n",
-    "* &#x1F6A8; road games last 4 weeks\n",
-    "* &#x1F6A8; home/away record\n",
-    "* &#x1F6A8; home/away record ATS\n",
+    "* &#x2714; binary H/V\n",
+    "* &#x2714; consecutive home/away games\n",
+    "* &#x2714; road games YTD, last {4, 8} weeks\n",
+    "* &#x2714; home/away record\n",
+    "* &#x2714; home/away record ATS\n",
     "* &#x270B; this team's home field. net H/V record recently?\n",
     "* &#x1F6A7; days since last home/away game\n",
     "* &#x270B; convolution of home/away games\n",
@@ -209,13 +209,6 @@
     " * maybe the difference from 1-16 is bigger than 17-32\n",
     " * could do some sort of binning of similar matchups\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
